# sci_agent

./: .gitignore  Q.txt  README.md  main.py  prompts.py  pyproject.toml  tools.py
