[project]
name = "sci-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daytona>=0.31.0",
    "ddgs[mcp]>=9.12.1",
    "deepagents>=0.4.12",
    "fastapi>=0.135.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-daytona==0.0.4",
    "uvicorn>=0.44.0",
    "asyncio>=4.0.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
]
